[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectra-api-tools"
version = "3.4.10"
authors = [
  { name="Brandon Wyatt", email="bwyatt@vectra.ai" },
  { name="Chris Johnson", email=cjohnson@vectra.ai" },
  { name="Eric Martin", email="emartin@vectra.ai" },
  { name="Vectra", email="tme@vectra.ai" },
]
description = "Vectra API client library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["requests", "pytz", "cabby", "stix", "backoff", "pytest-dependency"]

[project.urls]
Homepage = "https://github.com/vectranetworks/vectra_api_tools"

[tool.hatch.build.targets.wheel.force-include]
"./modules" = "vat"
